// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapseTransition test horizontal 1`] = `null`;

exports[`CollapseTransition test horizontal 2`] = `
<div
  class=""
  style="padding-left: 0px; padding-right: 0px;"
/>
`;

exports[`CollapseTransition test horizontal 3`] = `
<div
  class=""
  style="padding-left: 0px; padding-right: 0px; display: none;"
/>
`;

exports[`CollapseTransition test render 1`] = `null`;

exports[`CollapseTransition test render 2`] = `
<div
  class=""
  style="padding-top: 0px; padding-bottom: 0px;"
/>
`;

exports[`CollapseTransition test render 3`] = `
<div
  class=""
  style="padding-top: 0px; padding-bottom: 0px; display: none;"
/>
`;
